Data_lake/clickhouse-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clickhouse
  namespace: datalake
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clickhouse
  template:
    metadata:
      labels:
        app: clickhouse
    spec:
      containers:
        - name: clickhouse
          image: clickhouse/clickhouse-server:latest
          ports:
            - containerPort: 8123  # HTTP
            - containerPort: 9000  # Native
          volumeMounts:
            - name: clickhouse-storage
              mountPath: /var/lib/clickhouse
      volumes:
        - name: clickhouse-storage
          emptyDir: {}
