Data_lake/spark-worker.yaml
# ------------------
# Spark: Worker
# ------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-worker
  namespace: datalake
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spark-worker
  template:
    metadata:
      labels:
        app: spark-worker
    spec:
      containers:
        - name: spark-worker
          image: bitnami/spark:3.4.1
          ports:
