Data_lake/nginx-ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
  namespace: datalake
spec:
  type: NodePort
  selector:
    app: nginx-ingress
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 31111
    - name: https
      port: 443
      targetPort: 443
      nodePort: 31443
