Data_lake/spark-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-master
  namespace: datalake
spec:
  type: NodePort
  selector:
    app: spark-master
  ports:
    - name: web
      port: 8080
      targetPort: 8080
      nodePort: 31234
    - name: cluster
      port: 7077
      targetPort: 7077
