Data_lake/clickhouse-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clickhouse-ui
  namespace: datalake
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: 194-58-126-48.nip.io
      http:
        paths:
          - path: /clickhouse
            pathType: Prefix
            backend:
              service:
                name: clickhouse
                port:
                  number: 8123
