Data_lake/spark-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spark-ui
  namespace: datalake
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: 194-58-126-48.nip.io
      http:
        paths:
          - path: /spark
            pathType: Prefix
            backend:
              service:
                name: spark-master
                port:
                  number: 8080
